### Release v2.3

### New Features

* LuxCoreUI now shows eye and light pass counters if light tracing is enabled
* FILESAVER now expands inline exported constant texture values
* PhotonGI caustic scene re-factored to work with Vertex Merging (i.e. SPPM in this case)
* It is now possible to use light tracing for normal caustics and PhotonGI cache for SDS paths
* Added the support for shadow rays transparency for path tracers (aka hybrid glass, issue #233)
* Added the support for Basu and Owen's low discrepancy triangle light sampling (pull request #246)
* Added an option to normalize BlackBody texture output
* Pointiness shape is now able to handle duplicate/similar vertices like if they were the same
* Added the support for Displacement shape
* Added the support for vector displacement to Displacement shape

### Fixed Bugs

* None

Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
of release notes.

**Note for Windows users:** you have to install the [Microsoft Visual C++ Redistributable
for Visual Studio 2017](https://aka.ms/vs/15/release/vc_redist.x64.exe).