@@ -126,12 +126,13 @@ extern std::string KernelSource_film_mergesamplebuffer_funcs;
 extern std::string KernelSource_plugin_backgroundimg_funcs;
 extern std::string KernelSource_plugin_bloom_funcs;
 extern std::string KernelSource_plugin_cameraresponse_funcs;
+extern std::string KernelSource_plugin_coloraberration_funcs;
 extern std::string KernelSource_plugin_gammacorrection_funcs;
 extern std::string KernelSource_plugin_gaussianblur3x3_funcs;
 extern std::string KernelSource_plugin_objectidmask_funcs;
-extern std::string KernelSource_plugin_vignetting_funcs;
-extern std::string KernelSource_plugin_coloraberration_funcs;
 extern std::string KernelSource_plugin_premultiplyalpha_funcs;
+extern std::string KernelSource_plugin_vignetting_funcs;
+extern std::string KernelSource_plugin_whitebalance_funcs;
 extern std::string KernelSource_tonemap_reduce_funcs;
 extern std::string KernelSource_tonemap_autolinear_funcs;
 extern std::string KernelSource_tonemap_linear_funcs;
