@@ -66,6 +66,8 @@ film.outputs.2.filename = luxball_MATERIAL_ID_COLOR.png
 # Film image pipeline plug-ins
 film.imagepipelines.0.0.type = TONEMAP_LINEAR
 film.imagepipelines.0.0.scale = 1.2
+#film.imagepipelines.0.1.type = WHITE_BALANCE
+#film.imagepipelines.0.1.temperature = 2000
 #film.imagepipelines.0.0.type = TONEMAP_REINHARD02
 #film.imagepipelines.0.0.scale = 0.2
 #film.imagepipelines.0.1.type = CAMERA_RESPONSE_FUNC
